kubernetes/observability/alertmanager/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager-ingress-from-grafana
  namespace: alertmanager
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager-ingress-from-gateway
  namespace: alertmanager
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
